[package]
name = "proxyl"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6.0"
notify = "8.0"
regex = "1.11"
rpassword = "7.4"
toml = "0.8"
anyhow = "1.0"
http-body-util = "0.1"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.hudsucker]
version = "0.23"
features = ["openssl-ca"]

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[dependencies.tokio]
version = "1.45"
features = ["macros", "signal", "rt-multi-thread"]
